--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,14 @@
 .todolist{
   background-color: rgb(255, 207, 223);
   padding: 50px;
+  width: 550px;
 }
 .green{
   background-color: yellowgreen;
 }
 .orange{
   background-color: orange;
+}
+button{
+  margin: 10px;
 }
